@@ -67,9 +67,8 @@ static struct compunit_symtab *psymtab_to_symtab (struct objfile *objfile,
 
 
 
-psymtab_storage::psymtab_storage (struct objfile *objfile)
-  : psymbol_cache (psymbol_bcache_init ()),
-    m_obstack (&objfile->objfile_obstack)
+psymtab_storage::psymtab_storage ()
+  : psymbol_cache (psymbol_bcache_init ())
 {
 }
 
